fix: change overflow

--- a/src/customComponents/biopunkTable/styles.module.scss
+++ b/src/customComponents/biopunkTable/styles.module.scss
@@ -6,7 +6,7 @@ $breakpoint-mobile: 420px;
   border-radius: 1rem;
 
   background: linear-gradient(#00121B, #000102);
-  overflow: scroll;
+  overflow: auto;
   font-family: "Cairo", sans-serif;
   width: 80%;
   height: fit-content;
